# recruitments

./: .gitignore  README.md
backend/: cargo.toml  main.rs
backend/src/applicants/: service.rs
backend/src/auth/: middleware.rs  models.rs  service.rs
frontend/: Cargo.toml  cargo.toml
frontend/src/: main.rs  routers.rs
frontend/src/auth/: context.rs
frontend/src/components/: applicant_card.rs  applicant_list.rs  login.rs
frontend/src/services/: api.rs
frontend/static/: index.html
